# rhita

./: .gitignore  README.md  pyproject.toml
src/rhita/: __init__.py  create_cmap.py  data_processing.py  hazards_detection.py  hazards_detection_v1.py  main.py  output_options.py  output_options_v1.py  plot.py  statistics.py  utils.py
tests/: test_run.py
tests/input/: test_config.ini
tests/input/climate_variables/: ERA5_tas_day_Europe_20220801-20220831.nc
